--- a/Parkheesung.WebUI/Content/Site.css
+++ b/Parkheesung.WebUI/Content/Site.css
@@ -214,3 +214,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 
 .noRound { border-radius:0px !Important;-moz-border-radius:0px !Important;-webkit-border-radius:0px !Important; }
+
+.fb_iframe_widget { width:100% !important; }
+.fb_iframe_widget span { width:100% !important; }
+.fb_iframe_widget span iframe { width:100% !important; }
