--- a/Parkheesung.WebUI/Views/Account/Index.cshtml
+++ b/Parkheesung.WebUI/Views/Account/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="well bs-component">
-            <form name="frm" id="frm" method="post" action="" onsubmit="return ManageConfirm();" class="form-horizontal">
+            <form name="frm" id="frm" method="post" action="" onsubmit="return AccountConfirm();" class="form-horizontal">
                 <fieldset>
                     <legend>User Password</legend>
                     <div class="form-group">
