--- a/Parkheesung.WebUI/Views/Home/Index.cshtml
+++ b/Parkheesung.WebUI/Views/Home/Index.cshtml
@@ -30,7 +30,17 @@
     </div>
 </div>
 <div class="rows">
-    <div class="col-md-6">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Facebook Page</h3>
+            </div>
+            <div class="panel-body">
+                <div class="fb-page" data-href="https://www.facebook.com/parkheesungdev/" data-width="600" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/parkheesungdev/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/parkheesungdev/">박희성</a></blockquote></div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
         <div class="alert alert-success alert-dismissable">
             <h4>Contact me!</h4>
             <p>I am using the most SNS Service.</p>
@@ -38,19 +48,23 @@
             <p><a class="btn btn-success" href="#">Show SNS Channel list</a></p>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="list-group">
-            <a href="https://github.com/parkheesung/ReadingShare" class="list-group-item active" target="_blank">
-                <h4 class="list-group-item-heading">Reading Information sharing - ReadingShare</h4>
-                <p class="list-group-item-text">https://github.com/parkheesung/ReadingShare</p>
+            <a href="https://github.com/parkheesung/vnote" class="list-group-item" target="_blank">
+                <h4 class="list-group-item-heading">vNote for Web</h4>
+                <p class="list-group-item-text">github.com/parkheesung/vnote</p>
             </a>
-            <a href="https://github.com/parkheesung/KidsPlayShare" class="list-group-item" target="_blank">
-                <h4 class="list-group-item-heading">Place for Kids</h4>
-                <p class="list-group-item-text">https://github.com/parkheesung/KidsPlayShare</p>
+            <a href="https://github.com/parkheesung/vNoteAndroidV2" class="list-group-item" target="_blank">
+                <h4 class="list-group-item-heading">vNote for Android</h4>
+                <p class="list-group-item-text">github.com/parkheesung/vNoteAndroidV2</p>
+            </a>
+            <a href="https://github.com/parkheesung/ReadingShare" class="list-group-item" target="_blank">
+                <h4 class="list-group-item-heading">ReadingShare</h4>
+                <p class="list-group-item-text">github.com/parkheesung/ReadingShare</p>
             </a>
             <a href="https://github.com/parkheesung/OctopusLibrary" class="list-group-item" target="_blank">
                 <h4 class="list-group-item-heading">ASP.NET Web Development Library</h4>
-                <p class="list-group-item-text">https://github.com/parkheesung/OctopusLibrary</p>
+                <p class="list-group-item-text">github.com/parkheesung/OctopusLibrary</p>
             </a>
         </div>
     </div>
