--- a/Parkheesung.WebUI/Views/Shared/_Layout.cshtml
+++ b/Parkheesung.WebUI/Views/Shared/_Layout.cshtml
@@ -35,5 +35,13 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 @Scripts.Render("~/Script/bootstrap", "~/Script/Base")
 @RenderSection("ScriptLayer", false)
+<script>
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.8&appId=188436634692049";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
