--- a/Parkheesung.WebUI/Views/Home/Index.cshtml
+++ b/Parkheesung.WebUI/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active"><img src="/Content/img/Main_01.png"></div>
-                    <div class="item"><img src="/Content/img/main_02.png"></div>
+                    <div class="item"><img src="/Content/img/Main4.png"></div>
                     <div class="item"><img src="/Content/img/main_03.png"></div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
