--- a/Parkheesung.WebUI/Views/Member/Login.cshtml
+++ b/Parkheesung.WebUI/Views/Member/Login.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="pen-title">
-    <h1>단어암기장 - vNote</h1>
+    <h1>Parkheesung.com</h1>
 </div>
 <!-- Form Module-->
 <div class="module form-module">
@@ -36,8 +36,8 @@
 
 @section HeadLayer {
     <link href="/Content/reset.css" rel="stylesheet" />
-    <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
-    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <link href="/Content/login.css" rel="stylesheet" />
 }
 
