--- a/Parkheesung.WebUI/Views/Shared/_Layout.cshtml
+++ b/Parkheesung.WebUI/Views/Shared/_Layout.cshtml
@@ -10,17 +10,17 @@
 <meta property="og:title" content="@(ViewBag.Title)" />
 <meta property="og:image" content="@(ViewBag.Image)" />
 <meta property="og:description" content="@(ViewBag.description)" />
-<link rel="icon" href="@(ViewBag.domain)/apple32.png" />
-<link rel="shortcut icon" href="@(ViewBag.domain)/apple32.png" />
-<link rel='apple-touch-icon' href='@(ViewBag.domain)/apple32.png' />
+<meta name="naver-site-verification" content="defd4e41772abd70b4b26e74ba71e2326ebcf856" />
+<link rel="icon" href="//parkheesung.com/Content/images/icons/HomeLogo32x32.png" />
+<link rel="shortcut icon" href="//parkheesung.com/Content/images/icons/HomeLogo32x32.png" />
+<link rel='apple-touch-icon' href='//parkheesung.com/Content/images/icons/HomeLogo32x32.png' />
 <!--iOS icons-->
-<link rel='apple-touch-icon' href='@(ViewBag.domain)/apple32.png' />
-<link rel='apple-touch-icon-precomposed.png' href='@(ViewBag.domain)/apple32.png' />
-<link rel='apple-touch-icon-57x57' href='@(ViewBag.domain)/apple57.png' />
-<link rel='apple-touch-icon-57x57-precomposed' href='@(ViewBag.domain)/apple57.png' />
+<link rel='apple-touch-icon' href='//parkheesung.com/Content/images/icons/HomeLogo32x32.png' />
+<link rel='apple-touch-icon-precomposed.png' href='//parkheesung.com/Content/images/icons/HomeLogo32x32.png' />
+<link rel='apple-touch-icon-57x57' href='//parkheesung.com/Content/images/icons/HomeLogo57x57.png' />
+<link rel='apple-touch-icon-57x57-precomposed' href='//parkheesung.com/Content/images/icons/HomeLogo57x57.png' />
 <!--iOS icons-->
 @Styles.Render("~/Style/Base", "~/Style/bootstrap")
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800,700,400italic,600italic,700italic,800italic,300italic" rel="stylesheet" type="text/css">
 @RenderSection("HeadLayer", false)
 </head>
 <body @Html.Raw(ViewBag.Attr)>
@@ -42,6 +42,17 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.8&appId=188436634692049";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+</script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-46609243-1', 'auto');
+ga('send', 'pageview');
+
+</script>
 </body>
 </html>
