--- a/Parkheesung.WebUI/Views/Account/View.cshtml
+++ b/Parkheesung.WebUI/Views/Account/View.cshtml
@@ -72,7 +72,7 @@
                         <div class="col-md-12 text-center">
                             <button type="button" class="btn btn-primary" onclick="AccountUpdate('/Account/List?Keyword=@(Keyword)&GroupID=@(GroupID)')">Save</button>
                             <button type="button" class="btn btn-danger" onclick="AccountErase('@(Model.AccountID)','/Account/List?Keyword=@(Keyword)&GroupID=@(GroupID)')">Erase</button>
-                            <button type="button" class="btn btn-warning" onclick="gotoURL('/Account/List?Keyword=@(Keyword)&GroupID=@(GroupID)')">Cancel</button>
+                            <button type="button" class="btn btn-warning" onclick="gotoURL('/Account/List?Keyword=@(Keyword)&GroupID=@(GroupID)')">List</button>
                         </div>
                     </div>
                 </fieldset>
