--- a/Parkheesung.WebUI/Views/Home/Index.cshtml
+++ b/Parkheesung.WebUI/Views/Home/Index.cshtml
@@ -24,8 +24,8 @@
                 </a>
             </div>
             <div class="jumbotron-contents">
-                <h2>Web Programmer</h2>
-                <p>I have liked programming from the first time. <br />Now, enjoy the programming in spite of free time.</p>
+                <h2>Park heesung</h2>
+                <p>한때는 만화가를 꿈꿨고, 지금은 개발자로 살아가고 있으며, 언제가 될지 모를 창작자를 꿈꾸고, 좋은 남편이자 자상한 아빠가 되기를 바라며</p>
             </div>
         </div>
     </div>
