--- a/Parkheesung.WebUI/Views/Profile/_LeftMenu.cshtml
+++ b/Parkheesung.WebUI/Views/Profile/_LeftMenu.cshtml
@@ -4,7 +4,7 @@
 <div class="col-md-3">
     <ul class="list-group">
         <a class="list-group-item hand @SubPage.ValueCompare("profile", "active")" href="/Profile">박희성</a>
-        <a class="list-group-item hand @SubPage.ValueCompare("career", "active")" href="/Profile/Career">실무경험</a>
+        <a class="list-group-item hand @SubPage.ValueCompare("career", "active")" href="/Profile/Career">Projects</a>
         <a class="list-group-item hand @SubPage.ValueCompare("link", "active")" href="/Profile/Link">소셜링크</a>
     </ul>
 </div>
