Login Status Update

--- a/Parkheesung.WebUI/Views/Home/Index.cshtml
+++ b/Parkheesung.WebUI/Views/Home/Index.cshtml
@@ -44,9 +44,9 @@
     <div class="col-md-4">
         <div class="alert alert-success alert-dismissable">
             <h4>Contact me!</h4>
-            <p>I am using the most SNS Service.</p>
-            <p>Contact me if needed.</p>
-            <p><a class="btn btn-success" href="/Profile/Link">Show SNS Channel list</a></p>
+            <p>다수의 SNS 채널이 있습니다.</p>
+            <p>다만, 페이스북을 제외하고는 사용률이 높지 않습니다.</p>
+            <p><a class="btn btn-success" href="/Profile/Link">SNS보기</a></p>
         </div>
     </div>
     <div class="col-md-4">
